--- a/src/Components/Navbar/navbar.css
+++ b/src/Components/Navbar/navbar.css
@@ -18,7 +18,6 @@
 
 .nav-message p{
    color: rgb(253,14,10);
-   font-size: 17px;
    padding: 10px 0px;
    z-index: 999;
    animation: fadeIn 0.8s infinite alternate;
@@ -157,6 +156,14 @@
    transition: var(--bs-accordion-transition);
 }
 
+
+
+
+@media (max-width: 767px) {
+   .nav-message p{
+      font-size: 10px;
+   }
+}
 
 
 @media (min-width:992px){
