--- a/src/index.css
+++ b/src/index.css
@@ -176,8 +176,8 @@
    } */
    .div_sale {
       background: linear-gradient(-45deg, #ce6bec 20%, var(--main-color) 100%);
-      top: 15px;
-      right: 30px;
+      top: 12px;
+      right: 12px;
       padding: 2px 16px;
       font-size: 14px;
    }
@@ -224,3 +224,28 @@
 }
 /*& ========== End Down Time Component ============ */
 
+
+
+
+
+/*& ========== Start Show Item Component ============ */
+
+.container-show-items .loading {
+   width: 100px !important;
+   height: 36px !important;
+   padding-bottom:30px ;
+}
+.container-show-items #selectData {
+   width: 250px ;
+}
+
+
+
+
+@media (max-width: 767px) {
+   .container-show-items #selectData {
+      width: 140px !important;
+      margin-left: 20px !important;
+   }
+} 
+/*& ========== End Show Item Component ============ */
